--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ body {font-family: "Lato", sans-serif}
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
   <i class="fa fa-facebook-official w3-hover-opacity"><a href="https://www.facebook.com/people/FTC-Gryphon-Bots-25617/61566486385670/" target="_blank"></a></i>
-  <i class="fa fa-instagram w3-hover-opacity"></i>
+  <i class="fa fa-instagram w3-hover-opacity"><a href="https://www.instagram.com/ftcgryphonbots25/" target="_blank"></a></i>
   <i class="fa fa-snapchat w3-hover-opacity"></i>
   <i class="fa fa-pinterest-p w3-hover-opacity"></i>
   <i class="fa fa-twitter w3-hover-opacity"></i>
@@ -235,6 +235,4 @@ window.onclick = function(event) {
 
 </body>
 </html>
-
-
 
