--- a/index.html
+++ b/index.html
@@ -182,18 +182,21 @@ body {font-family: "Lato", sans-serif}
   
 <!-- End Page Content -->
 </div>
-
+  
 <!-- Image of location/map -->
 <img src="/w3images/map.jpg" class="w3-image w3-greyscale-min" style="width:100%">
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
-  <i class="fa fa-facebook-official w3-hover-opacity"><a href="https://www.facebook.com/people/FTC-Gryphon-Bots-25617/61566486385670/" target="_blank"></a></i>
-  <i class="fa fa-instagram w3-hover-opacity"><a href="https://www.instagram.com/ftcgryphonbots25/" target="_blank"></a></i>
-  <i class="fa fa-snapchat w3-hover-opacity"></i>
-  <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+  
+  <i class="fa fa-facebook-official w3-hover-opacity"
+     href=https://www.facebook.com/people/FTC-Gryphon-Bots-25617/61566486385670/
+     target="_blank"></i>
+  
+  <i class="fa fa-instagram w3-hover-opacity"></i>
+
   <i class="fa fa-twitter w3-hover-opacity"></i>
-  <i class="fa fa-linkedin w3-hover-opacity"></i>
+
   <p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 </footer>
 
@@ -235,4 +238,3 @@ window.onclick = function(event) {
 
 </body>
 </html>
-
