--- a/index.html
+++ b/index.html
@@ -190,8 +190,9 @@ body {font-family: "Lato", sans-serif}
 <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
   
   <i class="fa fa-facebook-official w3-hover-opacity"
-     href=https://www.facebook.com/people/FTC-Gryphon-Bots-25617/61566486385670/
-     target="_blank"></i>
+     <a href="https://www.facebook.com/people/FTC-Gryphon-Bots-25617/61566486385670/"
+     target="_blank"></a>
+  </i>
   
   <i class="fa fa-instagram w3-hover-opacity"></i>
 
