--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ body {font-family: "Lato", sans-serif}
   <!-- The Tour Section -->
   <div class="w3-black" id="tour">
     <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
-      <h2 class="w3-wide w3-center">Compition dates</h2>
+      <h2 class="w3-wide w3-center">Competition dates</h2>
       <p class="w3-opacity w3-center"><i>remember to come out and support us!</i></p><br>
 
       <ul class="w3-ul w3-border w3-white w3-text-grey">
@@ -189,10 +189,7 @@ body {font-family: "Lato", sans-serif}
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
   
-  <i class="fa fa-facebook-official w3-hover-opacity"
-     <a href="https://www.facebook.com/people/FTC-Gryphon-Bots-25617/61566486385670/"
-     target="_blank"></a>
-  </i>
+  <i class="fa fa-facebook-official w3-hover-opacity"><a href="https://www.facebook.com/people/FTC-Gryphon-Bots-25617/61566486385670/" target="_blank"></a></i>
   
   <i class="fa fa-instagram w3-hover-opacity"></i>
 
