--- a/index.html
+++ b/index.html
@@ -189,11 +189,10 @@ body {font-family: "Lato", sans-serif}
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
   
-  <img src="https://i.pinimg.com/736x/42/75/49/427549f6f22470ff93ca714479d180c2.jpg" class="w3-image w3-greyscale-min" style="width:5%"<a href="https://www.facebook.com/people/FTC-Gryphon-Bots-25617/61566486385670/" target="_blank"</a>
-  
-  <i class="fa fa-instagram w3-hover-opacity"></i>
-
-  <i class="fa fa-twitter w3-hover-opacity"></i>
+ 
+  <p class="w3-medium"><a href="https://www.instagram.com/ftcgryphonbots25/" target="_blank">Instagram</a></p>
+ 
+   <p class="w3-medium"><a href="https://www.tiktok.com/@ftcgryphonbotss" target="_blank">Tiktok</a></p>
 
   <p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 </footer>
