--- a/index.html
+++ b/index.html
@@ -72,11 +72,12 @@ body {font-family: "Lato", sans-serif}
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
     <h2 class="w3-wide">FTC GRYPHONBOTS</h2>
     <p class="w3-opacity"><i>We love robots</i></p>
+      <h2 class="w3-wide">ABOUT US</h2>
     <p class="w3-justify">We are the FTC gryphonbots and we love to build, code, and program robots. We are a team preparing for the First tech challege compition that is happeneing here pretty soon</p>
     <div class="w3-row w3-padding-32">
       <div class="w3-third">
         <p>Name</p>
-       <p> Antonio
+       <p> Antonio Cea
       </div>
       <div class="w3-third">
         <p>Name</p>
