--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body {font-family: "Lato", sans-serif}
     <div class="w3-dropdown-hover w3-hide-small">
       <button class="w3-padding-large w3-button" title="More">MORE <i class="fa fa-caret-down"></i></button>     
       <div class="w3-dropdown-content w3-bar-block w3-card-4">
-        <a href="#" class="w3-bar-item w3-button"href="https://ftcmerchandise15.github.io/" target="_blank">Merchandise</a>
+
         <a href="#" class="w3-bar-item w3-button">Extras</a>
         <a href="#" class="w3-bar-item w3-button">Media</a>
       </div>
@@ -89,6 +89,12 @@ body {font-family: "Lato", sans-serif}
       </div>
     </div>
   </div>
+  <div class="w3-center w3-padding-32">
+    
+    <div class="w3-bar">
+      <a href="#" class="w3-bar-item w3-button w3-hover-black"></a>
+      <a href="#" class="w3-bar-item <p class="w3-medium"><a href="https://ftcmerchandise15.github.io/" target="_blank">Merchandise</a></p></a>
+     
 
   <!-- The Tour Section -->
   <div class="w3-black" id="tour">
